If MEMSIZE isn't set, #error instead of proceeding using uninitialized stack garbage as the memory size. Please improve as needed; I don't know anything about this hardware.

PR 51150 from David Binderman.